# Azure-RTOS-on-Raspberry-Pi-Pico-RP2040

./: CMakeLists.txt  README.md  demo_threadx.c  main.c
